<resources>
    <string name="app_name">Acquiring</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_url" translatable="false">https://bellsworth.dev/apps/acquiring/privacy/</string>
</resources>
